# parameterize

./: CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt  index.cfg  index.html
source/: command.hpp  parameterize.cpp  parameterize.hpp  tool.cpp  tool.hpp  triangulate.hpp  util.hpp
